--- a/JS/js中级第二天_Dom2/留言板1.html
+++ b/JS/js中级第二天_Dom2/留言板1.html
@@ -226,7 +226,7 @@
 	   		topRight.style.color="";
 	   	}
 	   	
-	   	//选中textarea，开始编辑，改变a标签里的内容
+	   	//选中textarea，获取焦点，开始编辑，改变a标签里的内容
 	   	txt.onfocus=function(){
 	   	   topRight.innerHTML="还可以输入"+textLimit+"字";
 	   	   topRight.style.color="#CCCCCC";
