--- a/JS/js中级第三天_Dom3/2点击向上无动画(小火箭).html
+++ b/JS/js中级第三天_Dom3/2点击向上无动画(小火箭).html
@@ -20,7 +20,7 @@
 	<body id="pageTop" onclick="clickTop()">
 		<div id="div1">
 			<!--利用了a标签的跳转特性，通过寻找body的id，完成页面向上跳转-->
-			<!--<a href="#pageTop">向上</a>-->
+			<a href="#pageTop">向上</a>
 		</div>
 		<div style="width: 50px;">
 			那是怎么能否给i舒服的方式即使等级分索科洛夫科技谁的粉丝瑟夫斯u俄方和i失联飞机老师的空间发生龙卷风市政府计算机房i上的风景哦i讲啊讲地方史蒂夫能量释放四级大风撒辣椒粉三六九等分阿松的九分裤撒辣椒粉过泼水节俄方是你分开家里送到家发生纠纷就怕恶佛教哦啊金额佛菩萨警方破手机发就哦时间东风破手机给送积分那是怎么能否给i舒服的方式即使等级分索科洛夫科技谁的粉丝瑟夫斯u俄方和i失联飞机老师的空间发生龙卷风市政府计算机房i上的风景哦i讲啊讲地方史蒂夫能量释放四级大风撒辣椒粉三六九等分阿松的九分裤撒辣椒粉过泼水节俄方是你分开家里送到家发生纠纷就怕恶佛教哦啊金额佛菩萨警方破手机发就哦时间东风破手机给送积分那是怎么能否给i舒服的方式即使等级分索科洛夫科技谁的粉丝瑟夫斯u俄方和i失联飞机老师的空间发生龙卷风市政府计算机房i上的风景哦i讲啊讲地方史蒂夫能量释放四级大风撒辣椒粉三六九等分阿松的九分裤撒辣椒粉过泼水节俄方是你分开家里送到家发生纠纷就怕恶佛教哦啊金额佛菩萨警方破手机发就哦时间东风破手机给送积分那是怎么能否给i舒服的方式即使等级分索科洛夫科技谁的粉丝瑟夫斯u俄方和i失联飞机老师的空间发生龙卷风市政府计算机房i上的风景哦i讲啊讲地方史蒂夫能量释放四级大风撒辣椒粉三六九等分阿松的九分裤撒辣椒粉过泼水节俄方是你分开家里送到家发生纠纷就怕恶佛教哦啊金额佛菩萨警方破手机发就哦时间东风破手机给送积分那是怎么能否给i舒服的方式即使等级分索科洛夫科技谁的粉丝瑟夫斯u俄方和i失联飞机老师的空间发生龙卷风市政府计算机房i上的风景哦i讲啊讲地方史蒂夫能量释放四级大风撒辣椒粉三六九等分阿松的九分裤撒辣椒粉过泼水节俄方是你分开家里送到家发生纠纷就怕恶佛教哦啊金额佛菩萨警方破手机发就哦时间东风破手机给送积分那是怎么能否给i舒服的方式即使等级分索科洛夫科技谁的粉丝瑟夫斯u俄方和i失联飞机老师的空间发生龙卷风市政府计算机房i上的风景哦i讲啊讲地方史蒂夫能量释放四级大风撒辣椒粉三六九等分阿松的九分裤撒辣椒粉过泼水节俄方是你分开家里送到家发生纠纷就怕恶佛教哦啊金额佛菩萨警方破手机发就哦时间东风破手机给送积分那是怎么能否给i舒服的方式即使等级分索科洛夫科技谁的粉丝瑟夫斯u俄方和i失联飞机老师的空间发生龙卷风市政府计算机房i上的风景哦i讲啊讲地方史蒂夫能量释放四级大风撒辣椒粉三六九等分阿松的九分裤撒辣椒粉过泼水节俄方是你分开家里送到家发生纠纷就怕恶佛教哦啊金额佛菩萨警方破手机发就哦时间东风破手机给送积分那是怎么能否给i舒服的方式即使等级分索科洛夫科技谁的粉丝瑟夫斯u俄方和i失联飞机老师的空间发生龙卷风市政府计算机房i上的风景哦i讲啊讲地方史蒂夫能量释放四级大风撒辣椒粉三六九等分阿松的九分裤撒辣椒粉过泼水节俄方是你分开家里送到家发生纠纷就怕恶佛教哦啊金额佛菩萨警方破手机发就哦时间东风破手机给送积分那是怎么能否给i舒服的方式即使等级分索科洛夫科技谁的粉丝瑟夫斯u俄方和i失联飞机老师的空间发生龙卷风市政府计算机房i上的风景哦i讲啊讲地方史蒂夫能量释放四级大风撒辣椒粉三六九等分阿松的九分裤撒辣椒粉过泼水节俄方是你分开家里送到家发生纠纷就怕恶佛教哦啊金额佛菩萨警方破手机发就哦时间东风破手机给送积分那是怎么能否给i舒服的方式即使等级分索科洛夫科技谁的粉丝瑟夫斯u俄方和i失联飞机老师的空间发生龙卷风市政府计算机房i上的风景哦i讲啊讲地方史蒂夫能量释放四级大风撒辣椒粉三六九等分阿松的九分裤撒辣椒粉过泼水节俄方是你分开家里送到家发生纠纷就怕恶佛教哦啊金额佛菩萨警方破手机发就哦时间东风破手机给送积分那是怎么能否给i舒服的方式即使等级分索科洛夫科技谁的粉丝瑟夫斯u俄方和i失联飞机老师的空间发生龙卷风市政府计算机房i上的风景哦i讲啊讲地方史蒂夫能量释放四级大风撒辣椒粉三六九等分阿松的九分裤撒辣椒粉过泼水节俄方是你分开家里送到家发生纠纷就怕恶佛教哦啊金额佛菩萨警方破手机发就哦时间东风破手机给送积分那是怎么能否给i舒服的方式即使等级分索科洛夫科技谁的粉丝瑟夫斯u俄方和i失联飞机老师的空间发生龙卷风市政府计算机房i上的风景哦i讲啊讲地方史蒂夫能量释放四级大风撒辣椒粉三六九等分阿松的九分裤撒辣椒粉过泼水节俄方是你分开家里送到家发生纠纷就怕恶佛教哦啊金额佛菩萨警方破手机发就哦时间东风破手机给送积分那是怎么能否给i舒服的方式即使等级分索科洛夫科技谁的粉丝瑟夫斯u俄方和i失联飞机老师的空间发生龙卷风市政府计算机房i上的风景哦i讲啊讲地方史蒂夫能量释放四级大风撒辣椒粉三六九等分阿松的九分裤撒辣椒粉过泼水节俄方是你分开家里送到家发生纠纷就怕恶佛教哦啊金额佛菩萨警方破手机发就哦时间东风破手机给送积分
@@ -31,7 +31,7 @@
 
         //body被内容撑开，scrollTop获取的是滚动条和顶部的距离
         //返回顶部只需设置scrollTop是0即可
-           document.body.scrollTop=0;
+           // document.body.scrollTop=0;
 		}
 		</script>
 	</body>
