--- a/js高级/第一天_面向对象/2继承_1.html
+++ b/js高级/第一天_面向对象/2继承_1.html
@@ -35,6 +35,7 @@
 			//当子类调用了一个不存在的属性的时候,那么会去父类的属性中查找，
 			//找到则输出，未找到则输出undefined；
 			console.log(s.name);
+			console.log(s.money);
 			
 		</script>
 	</body>
