--- a/JS/js中级第三天_Dom3/7懒加载.html
+++ b/JS/js中级第三天_Dom3/7懒加载.html
@@ -80,17 +80,17 @@
 			alert(test(5));
 			
 			
-			function maxIn3(a,b,c){
-				return (a>b?a:b)>c?(a>b?a:b):c;
-			}
-			function maxIn4(a,b,c,d){
-				var max=maxIn3(a,b,c);
-				max>d?max:d;
-			}
-			function maxIn5(a,b,c,d,e){
-				var max=maxIn4(a,b,c,d);
-				max>e?max:e;
-			}
+			// function maxIn3(a,b,c){
+			// 	return (a>b?a:b)>c?(a>b?a:b):c;
+			// }
+			// function maxIn4(a,b,c,d){
+			// 	var max=maxIn3(a,b,c);
+			// 	max>d?max:d;
+			// }
+			// function maxIn5(a,b,c,d,e){
+			// 	var max=maxIn4(a,b,c,d);
+			// 	max>e?max:e;
+			// }
 			
 		</script>
 	</body>
