--- a/JS/js中级第四天_Dom4/循环.html
+++ b/JS/js中级第四天_Dom4/循环.html
@@ -10,13 +10,13 @@
 		
 		<script type="text/javascript">
 			//forin
-//			var arr=[1,2,3,4,5,6];
-//			for(var index in arr){
-//				console.log(index);
-            //forin获取的是下标
-//          console.log(arr[index]);
-// 
-//			}
+			// var arr=[1,2,3,4,5,6];
+			// for(var index in arr){
+			// 	console.log(index);
+            //for in获取的是下标
+            // console.log(arr[index]);
+
+			// }
 
    
            //foreach  获取的是数组元素
@@ -26,15 +26,15 @@
 //			
 			
 			//a,b是形参     10，20是实参
-//			function myFunc(a, b =100){
-//					
-//			}
+			function myFunc(a, b =100){
+					
+			}
 
-//			function myFunc(){
-//				// arguments可以获取当前函数所有传递的参数
-//				console.log(arguments);
-//			}
-//			myFunc(10,20);
+			function myFunc(){
+				// arguments可以获取当前函数所有传递的参数
+				console.log(arguments);
+			}
+			myFunc(10,20);
 
 
            //二维数组
