--- a/js高级/第三天_draw渐变/4drawShadow.html
+++ b/js高级/第三天_draw渐变/4drawShadow.html
@@ -16,11 +16,13 @@
 			can.fillStyle="thistle";
 			can.shadowColor="black";
 			//阴影横向偏移
+//			can.shadowOffsetX=0;
 			can.shadowOffsetX=-10;
 			//阴影纵向偏移
+//			can.shadowOffsetY=0;
 			can.shadowOffsetY=20;
 			//阴影模糊的程度
-			can.shadowBlur=7;
+			can.shadowBlur=70;
 			
             can.fill();
 			can.closePath();
