--- a/html/float浮动布局第六天/visibility.html
+++ b/html/float浮动布局第六天/visibility.html
@@ -13,13 +13,13 @@
       	/*rgba():占页面内容;
       	background-color: rgba(0,0,0,0,);	*/
 
-        /*display: none 不占页面内容
-      	display: none;*/
+        /*display: none 不占页面内容*/
+      	/*display: none;*/
 
-        /*visibility: 
+     /*   visibility: 
       	（1） visible 可视的，默认值
-      	（2） hidden  不可视的，依然占页面内容
-      	visibility:hidden;*/
+      	（2） hidden  不可视的，依然占页面内容*/
+      	visibility:visible;
 
       }
 	</style>
