--- a/html/html第一天/行和块区别.html
+++ b/html/html第一天/行和块区别.html
@@ -19,6 +19,15 @@
 	3.不可以设置宽度和高度（input和img可以设置宽高）
 	4.不可以设置纵向的margin
 	5.只能嵌套行标签（a标签不能被行标签嵌套）
-
+	<br />
+	<br />
+	<br />
+	<br />
+	
+	<input type="radio" name="sex" id="nan"/>
+	<label for="nan">男</label>
+	
+	<input type="radio" name="sex"  id="nv"/>
+    <label for="nv">女</label>
 </body>
 </html>
