--- a/html/float浮动布局第六天/清除浮动方法1_BFC.html
+++ b/html/float浮动布局第六天/清除浮动方法1_BFC.html
@@ -4,8 +4,12 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<style>
+	/*.allall{
+       overflow: hidden;
+	}*/
 	.all{
        border: 1px solid black;
+       /*float: left;*/
        overflow: hidden;
 	}
 	.all div{
@@ -24,7 +28,7 @@
 		/*清除浮动的方法：（一）*/
 		/*bfc:把页面进行单个封装处理，让元素回归文本流. 
 		 让浮动元素父级称为bfc的方法：
-		 （1）让父级也成为浮动元素，父级也需要清楚浮动。
+		 （1）让父级也成为浮动元素，父级也需要清除浮动。
 		 （2）overflow不为visible默认值
 		  (3) display的值为table-cell单元格、table-caption标题、inline-block行块
 		  (4) position不为static、relative
@@ -34,11 +38,14 @@
 	</style>
 </head>
 <body>
-	<div class="all">
-		<div>1</div>
-		<div>2</div>
-		<div>3</div>
-    </div>
+	
+		<div class="all">
+			<div>1</div>
+			<div>2</div>
+			<div>3</div>
+    	</div>
+	
+	
 	<p>123</p>
 </body>
 </html>
