--- a/js初级/基础第三天/1自增自减.html
+++ b/js初级/基础第三天/1自增自减.html
@@ -7,10 +7,10 @@
 	<body>
 		<script type="text/javascript">
 			var a=3;
-//			自增运算符: a++\++a 先运算后++\先++后运算
+//			自增运算符: a++(先运算后++)\++a(先++后运算)
 //          相当于:a=a+1 一>a+=1;
             
-//			自减运算符: a--\--a 先运算后--\先--后运算
+//			自减运算符: a--(先运算后--)\--a(先--后运算)
 //          相当于:a=a-1 一>a-=1;
             alert(a++);
             alert(a);
