--- a/js初级/基础第三天/4.遍历.html
+++ b/js初级/基础第三天/4.遍历.html
@@ -12,7 +12,7 @@
 		<a href="###">5</a>
 		<input id="btn" type="button" value="变"/>
 		<script type="text/javascript">
-		//一下这三个标签IE8不兼容
+		//以下这三个标签IE8不兼容
 //			document.querySelector();
 //			document.querySelectorAll();
 //			document.getElementsByClassName();
