--- a/js初级/基础第三天/第三天作业/1全选反选.html
+++ b/js初级/基础第三天/第三天作业/1全选反选.html
@@ -5,7 +5,7 @@
 		<title></title>
 	</head>
 	<body>
-		<input type="checkbox" class="xuan"/>
+		<input type="checkbox" class="xuan" id="xx"/>
 		<input type="button" name="btn1" id="btn1" value="全选" />
 		<input type="button" id="btn2" value="反选" />
 		<input type="checkbox" class="xuanze"/>
@@ -19,11 +19,13 @@
 			var btn2=document.getElementById("btn2");
 			var xuan=document.getElementsByClassName("xuan");
 			var xuanze=document.getElementsByClassName("xuanze");
+//			var xx=document.getElementById("xx");
 			btn2.onclick=function(){
 				for (var i=0;i<xuanze.length;i++) {
 //					xuanze[i].checked=true;
 					if(xuanze[i].checked==true){
 						xuanze[i].checked=false;
+						xuan[0].checked=false;
 					}else if(xuanze[i].checked==false){
 						xuanze[i].checked=true;
 					}
@@ -34,6 +36,14 @@
 					xuanze[i].checked=true;
 					xuan[0].checked=true;
 					
+				}
+			}
+			xx.onclick=function(){
+				for (var i=0;i<zuanze.length;i++) {
+					if(xuanze[i].checked==true){
+						xuanze[i].checked=false;
+					}
+
 				}
 			}
 			
