--- a/js初级/基础第五天/4.多次定时器.html
+++ b/js初级/基础第五天/4.多次定时器.html
@@ -24,45 +24,33 @@
 //			},3000);
 //			
 			
+		
+		var div1=document.getElementById("div1");
+      	var count=10;
+		var timer=setInterval(function(){
+				count--;
+				if(count<0){
+					div1.innerHTML="爆炸";
+//					清除定时器
+					clearInterval(timer);
+				}else{
+				div1.innerHTML=count;	
+				}
+			},1000);
 			
-//			var count=3;
-//			var timer= setInterval(function(){
-//				if(count<=0){
-////					清除定时器
-//					clearInterval(timer);
-//				}else{
-//					alert("起来了");
-//				}
-//				count--;
-//			},3000);
-
-
-//      var div1=document.getElementById("div1");
+			
+//		var div1=document.getElementById("div1");
 //    	var count=10;
 //		var timer=setInterval(function(){
-//				count--;
+//				count=count-0.01;
 //				if(count<0){
 //					div1.innerHTML="baozha";
 ////					清除定时器
 //					clearInterval(timer);
 //				}else{
-//				div1.innerHTML=count;	
+//				div1.innerHTML=count.toFixed(2);	
 //				}
-//			},1000);
-			
-			
-			var div1=document.getElementById("div1");
-      	var count=10;
-		var timer=setInterval(function(){
-				count=count-0.01;
-				if(count<0){
-					div1.innerHTML="baozha";
-//					清除定时器
-					clearInterval(timer);
-				}else{
-				div1.innerHTML=count.toFixed(2);	
-				}
-			},1000);
+//			},100);
 			
 		</script>
 	</body>
