--- a/js初级/基础第六天/作业/闰年.html
+++ b/js初级/基础第六天/作业/闰年.html
@@ -8,61 +8,50 @@
 
 	<body>
 		<script type="text/javascript">
-//			var newDate = new Date();
-//
-//			if(((year) && (year % 100 != 0)) || (year % 400 == 0)) {
-//				alert("闰年")
-//			} else {
-//				alert("平年")
-//			}
-
 			//闰年：可以被4整除但不能被100整除，或者能被400整除
 
-			int whichDayOfYear(int year, int month, int day) {
-				int sum = 0, leap;
-				swtich(month) {
-					case 1:
-						sum = 0;
-						break;
-						case2: sum = 31;
-						break;
-						case3: sum = 59;
-						break;
-						case4: sum = 90;
-						break;
-						case5: sum = 120;
-						break;
-					case 6:
-						sum = 151;
-						break;
-						case7: sum = 181;
-						break;
-					case 8:
-						sum = 212;
-						break;
-					case 9:
-						sum = 243;
-						break;
-					case 10:
-						sum = 273;
-						break;
-						case11: sum = 304;
-						break;
-						case12: sum = 334;
-						break;
-					default:
-						printf("data error");
-						break;
-				}
-				if((year % 4 == 0 && year % 100 != 0) || (year % 400 == 0))
-					leap = 1;
-				else
-					leap = 0;
-				if(leap == 1 && month > 2)
-					sum++;
-				return sum;
+			function run(year, month, day) {
+				//				if((year % 4 == 0 && year % 100 != 0)||(year%400==0)){
+				swtich((year % 4 == 0) && year % 100 != 0 || (year % 400 == 0)) {
+						case 1:
+							sum = 0;
+							break;
+							case 2:
+								sum = 31;
+							break;
+							case 3: sum = 59;
+							break;
+							case 4: sum = 90;
+							break;
+							case 5: sum = 120;
+							break;
+						case 6:
+							sum = 151;
+							break;
+							case 7: sum = 181;
+							break;
+						case 8:
+							sum = 212;
+							break;
+						case 9:
+							sum = 243;
+							break;
+						case 10:
+							sum = 273;
+							break;
+							case11: sum = 304;
+							break;
+							case12: sum = 334;
+							break;
+							return sum;
+						default:
+							console.log("平年");
+							break;
+					}
+					//				}
 
 			}
+			console.log(run(2010, 1, 20));
 		</script>
 	</body>
 
