--- a/js初级/基础第八天/作业/作业滚动.html
+++ b/js初级/基础第八天/作业/作业滚动.html
@@ -66,7 +66,7 @@
 		    var index=0;
 		    var autotimer=null;
 			var timer=null;
-			
+			var zhongdian=0;
 			
 			function nextRoll(){
 				var speed=10;
@@ -74,10 +74,14 @@
 				if(index>2){
 					index=0;
 					speed=-speed;
+				}else if(imgFa.offsetLeft<zhongdian){
+					speed=-speed;
+				}else if(imgFa.offsetLeft>zhongdian){
+					speed=10;
 				}
 			
 			//每次移动的终点
-			var zhongdian=-index*screenDiv.offsetWidth;
+			 zhongdian=-index*screenDiv.offsetWidth;
 			
 			clearInterval(timer);
 			timer=setInterval(function(){
@@ -89,9 +93,14 @@
 			},10);
 			}
 			
-			autotimer=setInterval(function(){
+			autoRoll();
+			function autoRoll(){
+				clearInterval(autotimer);
+				autotimer=setInterval(function(){
 				nextRoll();
 			},2000);
+			}
+			
 			
 			
 			//点击下一张
@@ -102,7 +111,29 @@
 			
 			//点击上一张
 			last.onclick=function(){
+				var speed=10;
+				index--;
+				if(index<0){
+					index=2;
+					speed=-speed;
+				}
+				zhongdian=-index*screenDiv.offsetWidth;
+				clearInterval(timer);
+				timer=setInterval(function(){
+					if(imgFa.offsetLeft==zhongdian){
+					clearInterval(timer);
+				}else{
+					imgFa.style.left=imgFa.offsetLeft+speed+"px";
+				}
+				},80)
+			}
+			
+			all.onmouseover=function(){
 				clearInterval(autotimer);
+				
+			}
+			all.onmouseout=function(){
+				autoRoll();
 			}
 			
 			
