--- a/js初级/基础dom1/3.dom操作.html
+++ b/js初级/基础dom1/3.dom操作.html
@@ -34,11 +34,11 @@
 
             //insertBefore:向节点之前插入节点:newEle2插在newEle1前面
             //注意：div1是newEle1的直系父子，隔一层就不好使了
-//          div1.insertBefore(newEle2,newEle1);
+            div1.insertBefore(newEle2,newEle1);
 //          document.body.insertBefore(newEle2,newEle1);//newEle1是body的孙子级的，所以不好用，只能是直系子集
 
             //replaceChild:替换节点(把newEle1替换为newEle2)后面替换前面；
-//          div1.replaceChild(newEle2,newEle1);
+            div1.replaceChild(newEle2,newEle1);
 
             
             //removeChild:从div1中把newEle2移除
