--- a/0811js初级/中级第五天—事件4/6.local永久登入.html
+++ b/0811js初级/中级第五天—事件4/6.local永久登入.html
@@ -54,31 +54,27 @@
 			</div>
 		</div>
 		<script type="text/javascript">
-		var input1=document.getElementsByTagName("input")[0];
-		var input2=document.getElementsByTagName("input")[1];
-		var input3=document.getElementsByTagName("input")[2];
-		var input4=document.getElementsByTagName("input")[3];
-		var label1=document.getElementsByTagName("label")[0];
-		input3.onfocus=function(){
-			input3.value=window.localStorage.name;
-		}
-		
+			var username = document.getElementById("username");
+			var userpass = document.getElementById("userpass");
+			var forget = document.getElementById("forget");
+			var btn = document.getElementById("btn");
 			
-			input4.onclick=function(){
-				if(label1.checked==true){
-					window.localStorage["username"]=input1.value;
+			
+			btn.onclick = function(){
+				
+				if(forget.checked == true){
+				window.localStorage.username = username.value;
+				window.localStorage.userpass = userpass.value;
+				alert("登陆成功")
+				}else{
+				window.localStorage.username = "";
+				window.localStorage.userpass = "";
+				alert("登陆成功");
 				}
-				alert("已经记住");
+				
 			}
-			 for (var i=0;i<window.localStorage.length;i++) {
-             	console.log(window.localStorage.key(i));
-             	var keys=window.localStorage.key(i);
-             	var values=window.localStorage[keys];
-             	console.log((keys+"+"+values));
-             }
-			
-			
-			
+			username.value = window.localStorage.username;
+			userpass.value = window.localStorage.userpass;
 		</script>
-</body>
+	</body>
 </html>
