--- a/0811js初级/中级第一天—BOM/1Bom.html
+++ b/0811js初级/中级第一天—BOM/1Bom.html
@@ -6,14 +6,15 @@
 	</head>
 	<body>
 		<script type="text/javascript">
-			//获取浏览器的位置ie、google、safari主流浏览器
+			//获取浏览器的位置ie、google、safari主流浏览器    ！！！！浏览器在屏幕上的位置坐标
 			console.log(window.screenLeft,window.screenTop);
 			//（不兼容ie用这个获取）
 			console.log(window.screenX,window.screenY);
 			
 			
 			
-			//浏览器窗口内部的高度,ie8不兼容
+
+			//浏览器窗口内部的高度,ie8不兼容       ！！！！浏览器在除去border的宽度和高度
 			console.log(window.innerWidth,window.innerHeight);
 			//浏览器窗口内部的高度 IE8兼容
 			console.log(document.documentElement.clientWidth,document.documentElement.clientHeight);
