--- a/项目副本/1home.html
+++ b/项目副本/1home.html
@@ -8,6 +8,7 @@
 		<link rel="stylesheet" media="screen and (max-width: 849px) and (min-width: 640px)" type="text/css" href="1about_media2.css"/>
 		<link rel="stylesheet" media="screen and (max-width: 639px) and (min-width: 300px)" type="text/css" href="1about_media3.css"/>
 		<title>http://www.shiningcg.com/plus/list.php?tid=3###</title>
+		<script src ="./jquery.min.js"></script>
 	</head>
 	<body>
 		<div id="wrap">
@@ -32,14 +33,14 @@
 			<div id="content">
 				<!--图1--> 
 				<!--给图1最外面的框设宽高-->
-				<div id="tu1" class="center1">
+				<div id="tu1" class="center">
 					<!--！！！！给图片div设宽高，不要给图片设具体高度，给图片要设宽高100% -->
-					<div class="center1_left">
-						<img class="t1" src="img1/home_pic_one.png"/>
-						<img class="t1_1" src="img1/home_pic_one_h.png" alt="">
+					<div class="center_img fl">
+						<img class="ht" src="img1/home_pic_one.png"/>
+						<img class="ct" src="img1/home_pic_one_h.png" alt="">
 					</div>
-					<div class="tiao1"></div>
-					<div class="center1_right">
+					<div class="tiao fl"></div>
+					<div class="center_text fl">
 						<a href="###">
 							<h1>RENDERINGS</h1>
 							<p>Masterplan、Public Building、commercial Building、Residential Building、Landscape Design</p>
@@ -47,13 +48,13 @@
 					</div>
 				</div>
 				<!--图2-->
-				<div id="tu2" class="center2">
-					<div class="center2_right">
-						<img class="t2" src="img1/home_pic_two.jpg"/>
-						<img class="t2_2" src="img1/home_pic_two_h.png"/>
+				<div id="tu2" class="center">
+					<div class="center_img fr">
+						<img class="ht" src="img1/home_pic_two.jpg"/>
+						<img class="ct" src="img1/home_pic_two_h.png"/>
 					</div>
-					<div class="tiao2"></div>
-					<div class="center2_left">
+					<div class="tiao fr"></div>
+					<div class="center_text fl">
 						<a href="###">
 							<h1>BIM</h1>
 							<p>Model Completion、Clash Detection、MEP Integration、Curtain Wall Remedying、BIM Consulting</p>
@@ -61,13 +62,13 @@
 					</div>
 				</div>
 				<!--图3-->
-				<div id="tu3" class="center1">
-					<div class="center1_left">
-						<img class="t3" src="img1/homes_pic_three.jpg"/>
-						<img class="t3_3" src="img1/homes_pic_three_h.jpg"/>
+				<div id="tu3" class="center">
+					<div class="center_img fl">
+						<img class="ht" src="img1/homes_pic_three.jpg"/>
+						<img class="ct" src="img1/homes_pic_three_h.jpg"/>
 					</div>
-					<div class="tiao3"></div>
-					<div class="center1_right">
+					<div class="tiao fl"></div>
+					<div class="center_text fl">
 						<a href="###">
 							<h1>3D ANIMATION</h1>
 							<p>Real estate advertising animation Design scheme Animation Corporate promotional Animation</p>
@@ -96,30 +97,29 @@
 			</div>
 		</div>
 		<script type="text/javascript">
-			var btn=document.getElementsByClassName("btn");
+			var btn= $(".btn");
 			var btn1=document.querySelector(".btn1");
-			var btn2=document.getElementsByClassName("btn2");
+			// var btn2=document.getElementsByClassName("btn2");
 			var caitu=["img2/facebook_h.jpg","img2/youtube_h.jpg","img2/linkedln_h.jpg","img2/twitter_h.jpg"];
 			var antu=["img2/facebook.jpg","img2/youtube.jpg","img2/linkedln.jpg","img2/twitter.jpg"];
 
-			var tu1=document.getElementById("tu1");
-			var tu2=document.getElementById("tu2");
-			var tu3=document.getElementById("tu3");
-			var t1=document.getElementsByClassName("t1");
-			var t2=document.getElementsByClassName("t2");
-			var t3=document.getElementsByClassName("t3");
-			var t1_1=document.getElementsByClassName("t1_1");
-			var t2_2=document.getElementsByClassName("t2_2");
-			var t3_3=document.getElementsByClassName("t3_3");
-			//!!!! querySelector:通过选择器选择，一定要加.
-			var tiao1=document.querySelector(".tiao1");
-			var tiao2=document.querySelector(".tiao2");
-			var tiao3=document.querySelector(".tiao3");
-			console.log("tiao1");
+            $(".center").each(function(){
+              $(this).find(".center_img").mouseover(function(){
+              	  $(this).find("img").eq(0).css("opacity",0);
+              	  $(this).find("img").eq(1).css("opacity",1);
+              	  $(this).siblings(".tiao").css("background-color", "greenyellow");
 
-			 console.log(t1);
-			// 	console.log(t2);
-			// 		console.log(t3);
+              })
+             $(this).find(".center_img").mouseout(function(){
+              	  $(this).find("img").eq(0).css("opacity",1);
+              	  $(this).find("img").eq(1).css("opacity",0);
+              	  $(this).siblings(".tiao").css("background-color", "");
+
+
+              })
+            })
+
+           	
 
 			//给每个a标签 设置同一个class的名字，for循环给每个a标签设置鼠标移入和移开事件
 			for(i=0;i<btn.length;i++){
@@ -139,52 +139,29 @@
 			   }
 			}
 			
-			//存彩图.src到数组里，当鼠标移入到img上，把暗图的src变到彩图的下标上
-			for (i=0;i<btn2.length;i++) {
-				//从角标开始：从0开始
-				btn2[i].index=i;
-				btn2[i].onmouseover=function(){
-					this.src=caitu[this.index];
-				}
-				btn2[i].onmouseout=function(){
-					this.src=antu[this.index];
-				}
-			}
+			$('.btn2').each(function(i){
+				$(this).mouseover(function(){
+					this.src=caitu[i];
+
+				})
+				$(this).mouseout(function(){
+					this.src=antu[i];
+
+				})
+			})
+			// //存彩图.src到数组里，当鼠标移入到img上，把暗图的src变到彩图的下标上
+			// for (i=0;i<btn2.length;i++) {
+			// 	//从角标开始：从0开始
+			// 	btn2[i].index=i;
+			// 	btn2[i].onmouseover=function(){
+			// 		this.src=caitu[this.index];
+			// 	}
+			// 	btn2[i].onmouseout=function(){
+			// 		this.src=antu[this.index];
+			// 	}
+			// }
 
 
-			//图1变颜色
-			tu1.onmouseover=function(){
-			   t1[0].style.opacity=0;
-               t1_1[0].style.opacity=1;
-               tiao1.style.backgroundColor="greenyellow";
-           }
-           	tu1.onmouseout=function(){
-			   t1[0].style.opacity=1;
-               t1_1[0].style.opacity=0;
-               tiao1.style.backgroundColor="";
-           }
-           	//图2变颜色
-			tu2.onmouseover=function(){
-			   t2[0].style.opacity=0;
-               t2_2[0].style.opacity=1;
-               tiao2.style.backgroundColor="greenyellow";
-           }
-           	tu2.onmouseout=function(){
-			   t2[0].style.opacity=1;
-               t2_2[0].style.opacity=0;
-               tiao2.style.backgroundColor="";
-           }
-           	//图3变颜色
-			tu3.onmouseover=function(){
-			   t3[0].style.opacity=0;
-               t3_3[0].style.opacity=1;
-               tiao3.style.backgroundColor="greenyellow";
-           }
-           	tu3.onmouseout=function(){
-			   t3[0].style.opacity=1;
-               t3_3[0].style.opacity=0;
-               tiao3.style.backgroundColor="";
-           }
 		</script>
 	</body>
 </html>
