--- a/0811js初级/基础dom2/4.瀑布流定位版.html
+++ b/0811js初级/基础dom2/4.瀑布流定位版.html
@@ -96,7 +96,7 @@
 				}
 			}
 			//获取一个数组里最小值
-			function getMinHeightIndex(arr) {
+			function getMinHeightIndex(         ) {
 				var min = arr[0];
 				var index = 0;
 				for(var i = 0; i < arr.length; i++) {
