--- a/html/css第二天/css选择器优先级.html
+++ b/html/css第二天/css选择器优先级.html
@@ -14,12 +14,21 @@
      	height: 150px;
      	background-color: blue;
      }
+     .div2{
+          width: 500px;
+          height: 200px;
+          background-color: black;
+     }
+
      .div2son{
      	background-color: red;
      }
+     /*优先级高于上面的*/
      .div2 .div2son{
      	background-color: pink;
      }
+     
+    
 
 	</style>
 </head>
