--- a/html/html第一天/1homework/1.百度页面/百度.html
+++ b/html/html第一天/1homework/1.百度页面/百度.html
@@ -28,7 +28,9 @@
             <td>
                 <!-- 中间 -->
                 <div align="center" ;>
-                    <img src="百度.png" alt="网络错误">
+                    <div class="">
+                        <img src="百度.png" alt="网络错误">
+                    </div>
                     <input  style="width: 600px; height: 30px;"type="text">
                    <input  style="width:100px; height: 35px; background-color:#0083ED;   color: white;"  type="submit" value="百度一下"  >
                 </div>
