--- a/html/html第一天/行和块区别.html
+++ b/html/html第一天/行和块区别.html
@@ -29,5 +29,13 @@
 	
 	<input type="radio" name="sex"  id="nv"/>
     <label for="nv">女</label>
+
+    <a href="">你好</a>
+    <a href="">对吗</a>
+    <a href="">怎么了</a>
+    
+    <p>哪里啊</p>
+    <p>哪里啊</p>
+    <p>哪里啊</p>
 </body>
 </html>
