--- a/html/html第一天/h5.html
+++ b/html/html第一天/h5.html
@@ -22,8 +22,8 @@
 
 
     <!-- 文本域  -->
-    <textarea name="" id="" cols="30" rows="10"></textarea>
-    <!-- 1.基本的样式设行和列：
+    <!-- <textarea name="" id="" cols="30" rows="10"></textarea> -->
+    1.基本的样式设行和列：
     <textarea name="" id="" cols="30" rows="10"></textarea>
 
     2.可以给id:命名，然后给style样式，设宽和高 
@@ -31,7 +31,7 @@
 
 	3.固定框的大小，不让鼠标能给拉伸：
 	 在<style>里设resize:none; 就框住了框的大小了
-	<textarea name="" id="" cols="30" rows="10"></textarea> -->
+	/*<textarea name="" id="" cols="30" rows="10"></textarea>*/
 
 
 	
