--- a/0811js初级/bootstrap/1bootstrap.html
+++ b/0811js初级/bootstrap/1bootstrap.html
@@ -8,6 +8,7 @@
     <title>Bootstrap 101 Template</title>
 
     <!-- Bootstrap的css -->
+    <!--要先引入bootstrap的css，再引入自己的css-->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet/less" href="css/less.less">
 
@@ -17,6 +18,7 @@
     <!--条件注释，如果小于IE9，就会被引入-->
     <!--[if lt IE 9]>
 
+
     <!--让低版本的浏览器，支持h5的新标签-->
     <script src="http://cdn.bootcss.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 
@@ -25,7 +27,7 @@
     <![endif]-->
 </head>
 <body>
-<h1>你好，世界！</h1>
+<h1>http://www.bootcss.com/网址</h1>
 To switch directories, type <kbd>cd</kbd> followed by the name of the directory.<br>
 To edit settings, press <kbd><kbd>ctrl</kbd> + <kbd>,</kbd></kbd>
 
