--- a/0811js初级/angular/douban/coming_soon/view.html
+++ b/0811js初级/angular/douban/coming_soon/view.html
@@ -2,7 +2,7 @@
 <ul class="tou">
     <li ng-repeat=" list in lists">
         <img src="{{list.images.medium}}" alt="">
-        <div>
+        <div class="zi">
             <p>{{list.title}}</p>
             <p>导演：{{list.directors[0].name}},{{list.directors[1].name}}</p>
             <p>类型：{{list.genres[0]}},{{list.genres[1]}},{{list.genres[2]}}</p>
