--- a/0811js初级/angular/douban/in_theaters/view.html
+++ b/0811js初级/angular/douban/in_theaters/view.html
@@ -1,3 +1,31 @@
-<h1 class="page-header">即将上映</h1>
+<h1 class="page-header">{{title}}</h1>
+<div class="list-group">
+    <a ng-repeat="movie in subjects track by movie.id" href="#" class="list-group-item">
+        <div class="media">
+            <div class="media-left">
+                <img ng-src="{{movie.images.small}}" alt="...">
+            </div>
 
+            <div class="media-body">
+                <h4 class="media-heading">{{movie.title}}</h4>
+                <p>导演:{{movie.directors[0].name}}</p>
+            </div>
+        </div>
+    </a>
+</div>
+
+<p>总共{{totalPageCount}}页
+    当前{{currentPage}}页</p>
+
+<nav>
+    <ul class="pager">
+        <li ng-class="{disabled:currentPage<=1}"><input type="button" ng-click="go(currentPage-1)" value="Previous" ng-disabled="currentPage<=1"></li>
+        <li><a ng-click="go(currentPage+1)">Next</a></li>
+    </ul>
+</nav>
+
+<div class="spinner" ng-show="showLoading">
+    <div class="dot1"></div>
+    <div class="dot2"></div>
+</div>
 
